--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,7 +16,7 @@ exclude = ["/tests"]
 proc-macro = true
 
 [features]
-leafwing = ["lightyear/leafwing"]
+leafwing = []
 
 
 [dependencies]
@@ -30,7 +30,7 @@ uuid = { version = "1.6.1", features = ["v4"] }
 
 
 [dev-dependencies]
-lightyear = { path = "../lightyear" }
+lightyear = { path = "../lightyear"}
 leafwing-input-manager = { version = "0.11.2" }
 enum-as-inner = "0.6.0"
 bevy = { version = "0.12", default-features = false }
