--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -49,9 +49,10 @@ thiserror = "1.0.50"
 leafwing-input-manager = { version = "0.11.2", optional = true }
 
 # physics
-bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = [
-  "serialize",
-], optional = true }
+bevy_xpbd_2d = { version = "0.3.2", optional = true }
+#bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = [
+#  "serialize",
+#], optional = true }
 
 
 # transport
