--- a/examples/interest_management/Cargo.toml
+++ b/examples/interest_management/Cargo.toml
@@ -18,7 +18,8 @@ webtransport = ["lightyear/webtransport", "dep:tokio"]
 mock_time = ["lightyear/mock_time"]
 
 [dependencies]
-lightyear = { path = "../../lightyear", features = ["webtransport"] }
+lightyear = { path = "../../lightyear", features = ["webtransport", "leafwing"] }
+leafwing-input-manager = "0.11.2"
 serde = { version = "1.0.188", features = ["derive"] }
 anyhow = { version = "1.0.75", features = [] }
 tracing = "0.1"
@@ -30,6 +31,8 @@ clap = { version = "4.4", features = ["derive"] }
 mock_instant = "0.3"
 metrics-exporter-prometheus = { version = "0.13.0", optional = true }
 bevy-inspector-egui = "0.22.1"
+cfg-if = "1.0.0"
+ring = "0.16.20"
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 tokio = { version = "1.34", features = [
