--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -99,24 +99,25 @@ metrics-tracing-context = { version = "0.15", optional = true }
 metrics-exporter-prometheus = { version = "0.13.0", optional = true, default-features = false, features = [
   "http-listener",
 ] }
-tokio = { version = "1.34", features = [
-  "macros",
-  "rt",
-  # "rt-multi-thread" is only valid in native.
-  "rt-multi-thread",
-  "sync",
-#  "net",
-  "time",
-], optional = true }
+
 
 # bevy
 bevy = { version = "0.12", default-features = false }
 
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
-wtransport = { git = "https://github.com/BiagioFesta/wtransport.git", rev = "ba03a8497be26d4f11c62a2d5c12932d6c13ea96", optional = true, features = [
-  "dangerous-configuration"
+wtransport = { version = "0.1.10", optional = true, features = [
+  "self-signed", "dangerous-configuration"
 ]}
+tokio = { version = "1.34", features = [
+  "macros",
+  "rt",
+  # "rt-multi-thread" is only valid in native.
+  "rt-multi-thread",
+  "sync",
+  #  "net",
+  "time",
+], optional = true }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook = { version = "0.1.7"}
@@ -139,6 +140,15 @@ getrandom = { version = "0.2.11", features = ["js"] }  # feature 'js' is require
 #rustls-pemfile = { version = "2.0.0", optional = true }
 xwt-core = { version = "0.2", optional = true }
 xwt-web-sys = { version = "0.3.1", optional = true }
+tokio = { version = "1.34", features = [
+  "macros",
+  "rt",
+  # "rt-multi-thread" is only valid in native.
+#  "rt-multi-thread",
+  "sync",
+  #  "net",
+  "time",
+], optional = true }
 
 
 [dev-dependencies]
