--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -39,7 +39,9 @@ cfg-if = "1.0"
 derive_more = "0.99.17"
 enum_delegate = "0.2"
 enum_dispatch = "0.3"
+governor = "0.6.0"
 mock_instant = { version = "0.3.1", optional = true }
+nonzero_ext = "0.3.0"
 paste = "1.0"
 rand = "0.8"
 ringbuffer = "0.15"
