--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -80,7 +80,7 @@ jobs:
           --exclude=.git \
           --exclude=.github \
           -cvf "$RUNNER_TEMP/artifact.tar" \
-          - ./examples/**/dist \
+          ./examples/**/dist \
           -C book ./book
       - name: Upload artifact
         uses: actions/upload-artifact@v4
