--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -6,9 +6,9 @@ description = "Common harness for the lightyear examples"
 
 [dependencies]
 lightyear = { path = "../../lightyear", features = [
-  "steam",
-  "webtransport",
-  "websocket",
+    "steam",
+    "webtransport",
+    "websocket",
 ] }
 
 # utils
@@ -17,6 +17,7 @@ async-compat = "0.2.3"
 cfg-if = "1.0.0"
 clap = { version = "4.5.4", features = ["derive"] }
 crossbeam-channel = "0.5.12"
+rand = "0.8.5"
 serde = { version = "1.0.201", features = ["derive"] }
 
 
