--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lightyear_examples_common"
-version = "0.17.0"
-authors = ["Charles Bournhonesque <charlesbour@gmail.com>"]
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 description = "Common harness for the lightyear examples"
 readme = "../README.md"
 repository = "https://github.com/cBournhonesque/lightyear"
@@ -25,26 +25,26 @@ bevygap_server = ["server", "dep:bevygap_server_plugin"]
 # even though we're not using cargo-hakari.
 
 gui = [
-  "dep:bevy-inspector-egui",
-  "bevy/bevy_asset",
-  "bevy/bevy_render",
-  "bevy/bevy_pbr",
-  "bevy/bevy_scene",
-  "bevy/bevy_core_pipeline",
-  "bevy/bevy_gizmos",
-  "bevy/tonemapping_luts",
-  "bevy/smaa_luts",
-  "bevy/default_font",
-  "bevy/png",
-  "bevy/hdr",
-  "bevy/x11",
-  "bevy/webgl2",
-  "bevy/bevy_winit",
-  "bevy/bevy_picking",
-  "bevy/bevy_sprite",
-  "bevy/bevy_text",
-  "bevy/bevy_ui",
-  "bevy/bevy_window",
+    "dep:bevy-inspector-egui",
+    "bevy/bevy_asset",
+    "bevy/bevy_render",
+    "bevy/bevy_pbr",
+    "bevy/bevy_scene",
+    "bevy/bevy_core_pipeline",
+    "bevy/bevy_gizmos",
+    "bevy/tonemapping_luts",
+    "bevy/smaa_luts",
+    "bevy/default_font",
+    "bevy/png",
+    "bevy/hdr",
+    "bevy/x11",
+    "bevy/webgl2",
+    "bevy/bevy_winit",
+    "bevy/bevy_picking",
+    "bevy/bevy_sprite",
+    "bevy/bevy_text",
+    "bevy/bevy_ui",
+    "bevy/bevy_window",
 ]
 
 [dependencies]
