--- a/lightyear_connection/Cargo.toml
+++ b/lightyear_connection/Cargo.toml
@@ -15,6 +15,7 @@ std = ["lightyear_link/std", "lightyear_transport/std"]
 [dependencies]
 # local crates
 lightyear_link.workspace = true
+lightyear_messages.workspace = true
 lightyear_transport.workspace = true
 lightyear_serde.workspace = true
 
@@ -30,6 +31,9 @@ serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 chacha20poly1305.workspace = true
+
+#[dev-dependencies]
+lightyear_macros.workspace = true
 
 [lints]
 workspace = true
