--- a/lightyear_sync/Cargo.toml
+++ b/lightyear_sync/Cargo.toml
@@ -23,6 +23,7 @@ lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
 lightyear_messages.workspace = true
+lightyear_transport.workspace = true
 
 # utils
 tracing.workspace = true
