--- a/lightyear_sync/Cargo.toml
+++ b/lightyear_sync/Cargo.toml
@@ -22,6 +22,7 @@ std = [
 lightyear_utils.workspace = true
 lightyear_serde.workspace = true
 lightyear_core.workspace = true
+lightyear_link.workspace = true
 lightyear_messages.workspace = true
 lightyear_transport.workspace = true
 
